@@ -13,7 +13,7 @@ $config['menu_choices'] = array(
         array('name' => 'Golf', 'link' => '#'),
         array('name' => 'Hotel', 'link' => '#'),
         array('name' => 'India', 'link' => '#'),
-        array('name' => 'Juliet', 'link' => '#'),
+        array('name' => 'Juliet', 'link' => '/juliet'),
         array('name' => 'Kilo', 'link' => '#'),
         )
     );
