@@ -46,10 +46,11 @@ Release Date: 9/29/2017
 
 
 ## New Components
-
+ - controllers/Juliet.php: added service controller (TE)
 
 
 ## Updated Components
+ - config.php: added target link for Juliet (TE)
 
 
 
